[package]
name = "nightlight-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "multipart", "json"] }
serde_json = "1.0.116"
global-hotkey = "0.5.3"
chrono = "0.4.38"
xcap = "0.0.9"
